# The-global-cost-of-internet-shutdowns

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  REPRODUCIBILITY.md  pyproject.toml
app/: streamlit_dashboard.py
data/processed/: SNAPSHOTS.md  access_now_snapshot_2026-05-20.parquet  analytic_dataset_2026-05-20.parquet  top10vpn_snapshot_2026-05-20.parquet
data/raw/: top10vpn_2019.csv  top10vpn_2020.csv  top10vpn_2021.csv  top10vpn_2022.csv  top10vpn_2023.csv  top10vpn_2024.csv  top10vpn_2025.csv
notebooks/: 02_main.ipynb  03_robustness.ipynb  NOTEBOOK_STRUCTURE.md
report/: internet-shutdowns-report.md
src/internet_shutdowns/: __init__.py  clean.py  data.py  diagnostics.py  rollups.py  viz.py
tests/: test_smoke.py
