[project]
name = "internet-shutdowns"
version = "0.1.0"
description = "Where, when, and at what estimated cost have governments imposed internet shutdowns since 2019 — descriptive cartographic + time-series study using Access Now's #KeepItOn registry, Top10VPN's (contested) cost figures, World Bank macro indicators, and GADM boundaries."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Muhanad", email = "muhanad.a.husn@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "requests>=2.32",
    "requests-cache>=1.2",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pycountry>=23.12",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "kaleido>=0.2.1",        # plotly static image export
    "plotnine>=0.13",
    "streamlit>=1.32",       # dashboard (Session 6 deliverable)
]
geo = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "folium>=0.16",
    "pyogrio>=0.7",
    "mapclassify>=2.6",
]
nlp = [
    "scikit-learn>=1.4",
    "spacy>=3.7",
    "tiktoken>=0.6",
]
llm = [
    "openai>=1.0",
]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pre-commit>=3.6",
    "jupytext>=1.16",
    "nbstripout>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internet_shutdowns"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
